--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
 <div class="center">
-<input id="i" type="text" onkeydown="ck(event)"></div><br><div class="center"><label for="onw">Open in New Window</label><input type="checkbox" name="onw" id="onw"></div><br>
+  <h1>Enter Password:</h1>
+</div>
+  <div class="center">
+<input id="i" type="password" onkeydown="ck(event)"></div><br>
 <div class="center">
-<button id="s" onclick="openUrl()">Go →</button></div>
+<button id="s" onclick="mainPage()">Go →</button></div>
 
-<script src="script.js">
+<scrip src="pass.js">
 </script>
 
 </body>
