--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="center">
 <button id="s" onclick="mainPage()">Go →</button></div>
 
-<scrip src="pass.js">
+<script src="pass.js">
 </script>
 
 </body>
