--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="center">
-  <h1>Enter Password:</h1>
+  <h1 id="h">Enter Password:</h1>
 </div>
   <div class="center">
 <input id="i" type="password" onkeydown="ck(event)"></div><br>
