--- a/open.html
+++ b/open.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="center">
-<input id="i" type="text" onkeydown="ck(event)"></div><br><div class="center"><label for="onw">Open in New Window</label><input type="checkbox" name="onw" id="onw"></div><br>
+<input id="i" type="text" onkeydown="ck(event)"></div><br><div class="center"><label for="onw">Open in New Window</label><input type="checkbox" name="onw" id="onw"></div><br><label for="onp">Use proxy unblocker</label><input type="checkbox" name="onp" id="onp"><br>
 <div class="center">
 <button id="s" onclick="openUrl()">Go →</button></div>
 
